crates/nash-parse/src/snapshots/nash_parse__exposing__tests__error_missing_little_type_name.snap
---
source: crates/nash-parse/src/exposing.rs
description: "Code:\n\n(type)"
---
TypeName(
    1,
    6,
)
