crates/nash-parse/src/snapshots/nash_parse__exposing__tests__error_unclosed_little_type.snap
---
source: crates/nash-parse/src/exposing.rs
description: "Code:\n\n(type option(..)"
info: diagnostic
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:17]
 1 │ (type option(..)
   · ┬               ┬
   · │               ╰── expected `)`
   · ╰── opened here
   ╰────
  help: Add `)` here.
