crates/nash-parse/src/snapshots/nash_parse__exposing__tests__error_uppercase_after_type.snap
---
source: crates/nash-parse/src/exposing.rs
description: "Code:\n\n(type Foo)"
---
TypeName(
    1,
    7,
)
