crates/nash-parse/src/snapshots/nash_parse__exposing__tests__exposing_little_type_public.snap
---
source: crates/nash-parse/src/exposing.rs
description: "Code:\n\n(type option(..))"
---
Explicit(
    [
        LowerType {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 13,
                    },
                },
                value: "option",
            },
            privacy: Public(
                Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 16,
                    },
                },
            ),
        },
    ],
)
